Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50422

QCameraViewfinderSettingsControl2 is not implemented on Android

    XMLWordPrintable

Details

    • 62d9b69e4d9ee9f180e4ac07fb72e00a002d3c02

    Description

      There is no class that implements QCameraViewfinderSettingsControl2 interface on Android. It means that viewfinderSettingsControl2 member of class QCameraPrivate is always null, hence such methods like QCamera::supportedViewfinderSettings will always return empty list.

      This is already mentioned in https://bugreports.qt.io/browse/QTBUG-46470 but bug is closed. I think it makes sense to open this feature request for tracking purpose, e.g. to know if somebody will fix it.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ylopes Yoann Lopes
              ruslo Ruslan Baratov
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes