Implement QCameraViewfinderSettingsControl2 interface for Android

Add class QAndroidViewfinderSettingsControl2 which implements
QCameraViewfinderSettingsControl2 interface. This make next QCamera methods
working on Android:
* QCamera::setViewfinderSettings
* QCamera::supportedViewfinderFrameRateRanges
* QCamera::supportedViewfinderPixelFormats
* QCamera::supportedViewfinderResolutions
* QCamera::supportedViewfinderSettings
* QCamera::viewfinderSettings

Effectively fixing bug:
* https://bugreports.qt.io/browse/QTBUG-50422

Originally from:
* https://github.com/headupinclouds/gatherer/issues/109